--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <h1>Beetroot<i>(Beta vulgaris)</i></h1>
       <nav class="nav">
         <ol>
-          <li>Common varieties</li>
-          <li>Nutritional information</li>
-          <li>Tags</li>
+          <li><a href>Common varieties</a href></li>
+          <li><a href>Nutritional information</a href></li>
+          <li><a href>Tags</a href></li>
         </ol>
       </nav>
       <figure>
-        <img src="beets.jpg" alt="Beets">
+        <img src="beets.jpg" alt="">
         <figcaption>Beets</figcaption>
       </figure>
     </header>
