--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>beets</title>
+  <title>Beets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif" rel="stylesheet">
 </head>
 
 <body>
@@ -15,19 +14,18 @@
       <h1>Beetroot<i>(Beta vulgaris)</i></h1>
       <nav class="nav">
         <ol>
-          <li><a href>Common varieties</a href></li>
-          <li><a href>Nutritional information</a href></li>
-          <li><a href>Tags</a href></li>
+          <li><a href>Common varieties</a></li>
+          <li><a href>Nutritional information</a></li>
+          <li><a href>Tags</a></li>
         </ol>
       </nav>
       <figure>
         <img src="beets.jpg" alt="">
-        <figcaption>Beets</figcaption>
+        <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
       </figure>
     </header>
 
-    <p>A bundle of organic beets from a local farm food co-op program.</p>
-    <p><b>55 to 65 days are needed from germination to harvest of the root</b></p>
+    <p><b class="germ">55 to 65 days are needed from germination to harvest of the root</b></p>
     <p><em>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</em></p>
     <p>In fact, Jim Halpert once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica".</i></q></p>
     <blockquote class="habit">I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.<cite>-Chris Pratt</cite></blockquote>
@@ -42,7 +40,7 @@
       <li>Early Wonder</li>
     </ol>
 
-    <h3>Nutritional Information</h3>
+    <h2>Nutritional Information</h2>
     <p>
       <data value="100 g"> Serving size: 100 g</data>
     </p>
@@ -57,7 +55,7 @@
       <dd>1.68 g</dd>
     </dl>
 
-    <h4>Tags</h4>
+    <h2>Tags</h2>
     <ul>
       <li>Crimson</li>
       <li>Awesome</li>
